8 added fix for misaligned hierarchies

--- a/content/assets/css/_append.project.css
+++ b/content/assets/css/_append.project.css
@@ -240,3 +240,30 @@ table .grid tr:nth-child(even) {
   background-color: #FFF;
   color: #da0c23;
 }
+
+.hierarchy {
+  border: 0px;
+  padding:0px 4px 0px 4px;
+	font-size: 11px;
+	font-family: verdana;
+	vertical-align: top;
+  background-position-x: 2px;
+}
+
+pre.json {
+  width: 100%;
+}
+
+pre.xml {
+  width: 100%;
+}
+
+pre.rdf {
+  width: 100%;
+}
+
+#segment-footer {
+  position: unset;
+  bottom: 0px;
+  width: -webkit-fill-available;
+}
